# liberland_node

./: .gitignore  Cargo.toml  Makefile  README.md  customSpec.json  docker-compose.yml  notes.txt
.github/workflows/: build.yml  check.yml  clippy.yml  fmt.yml
data/validator1/chains/staging_testnet/db/: IDENTITY  LOG  OPTIONS-000031  OPTIONS-000033
docs/: identity.md  rpc.md  testnet.md
node/: Cargo.toml
node/cli/: build.rs
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
node/src/: chain_spec.rs  identity_rpc.rs  kyc_rpc.rs  lib.rs  main.rs  referendum_rpc.rs  rpc.rs  service.rs
old/: CONTRIBUTING.md  README.md
old/docs/: rpc.md
old/node/src/: command.rs  identity_rpc.rs  main.rs  min_interior_rpc.rs  referendum_rpc.rs
old/pallets/assembly/src/: tests.rs
old/pallets/documentation/: README.md
old/pallets/documentation/src/: lib.rs  mock.rs
old/pallets/identity/src/: mock.rs  tests.rs
old/pallets/min-of-interior/src/: lib.rs  mock.rs  tests.rs
old/pallets/prime-minister/: README.md
old/pallets/prime-minister/src/: tests.rs
old/pallets/staking/: Cargo.toml
old/pallets/staking/src/: benchmarking.rs  liberland_tests.rs  mock.rs  tests.rs  weights.rs
old/pallets/voting/: Cargo.toml
old/pallets/voting/src/: finalize_voiting_trait.rs  lib.rs  mock.rs
old/runtime/: Cargo.toml
old/runtime/src/: lib.rs
pallets/assembly/: Cargo.toml  README.md
pallets/assembly/src/: lib.rs  mock.rs  tests.rs
pallets/documentation/: Cargo.toml
pallets/documentation/src/: lib.rs  tests.rs
pallets/identity/: Cargo.toml  README.md
pallets/identity/src/: lib.rs  tests.rs
pallets/kyc/: Cargo.toml  README.md
pallets/kyc/src/: lib.rs  mock.rs  tests.rs
pallets/min-of-interior/: Cargo.toml
pallets/min-of-interior/src/: lib.rs  mock.rs  tests.rs
pallets/min_of_interior/: Cargo.toml  README.md
pallets/min_of_interior/src/: lib.rs  tests.rs
pallets/prime-minister/: Cargo.toml
pallets/prime-minister/src/: lib.rs  mock.rs
pallets/referendum/: Cargo.toml  README.md
pallets/referendum/src/: lib.rs  mock.rs  tests.rs
pallets/staking/: Cargo.toml
pallets/staking/src/: benchmarking.rs  lib.rs  liberland_tests.rs  slashing.rs  testing_utils.rs  tests.rs  weights.rs
pallets/voting/: Cargo.toml
pallets/voting/src/: finalize_voiting_trait.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: dial_remote.sh  docker-run.sh  init.sh  run_remote_val.sh  start.v.sh  start_first.sh  start_second.sh  start_second_validator.sh  start_validator.sh
